@@ -1384,6 +1384,7 @@ Norman Vine
 Pauli Virtanen
 Frank Visser
 Johannes Vogel
+Vajrasky Kok
 Alex Volkov
 Guido Vranken
 Martijn Vries
